// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should match children snapshot 1`] = `
<div
  label="label"
>
  <span>
    This is a children
  </span>
</div>
`;

exports[`Tab should match default snapshot 1`] = `
<div
  label="label"
/>
`;
